chore: others algs in makefile

--- a/src/makefile
+++ b/src/makefile
@@ -1,11 +1,10 @@
-# codname = algoritmoIlhaEscolhaProporcional
- codname = algoritmoIlhaEscolhaDireta
-# codname = getInputForFuraaf
-# codname = utils/medidas_geneticas
-#codname = ${COD_NAME}
+commom_libs = ./libs/statistics.c ./libs/log.c ./libs/crossover.c ./libs/types.c ./libs/utils.c ./libs/funcoes_cec_2015/cec15_test_func.c ./libs/funcoes_cec_2015/ecr_iml.c ./libs/funcoes_cec_2015/evaluation_count_iml.c ./libs/funcoes_cec_2015/record_result_iml.c ./libs/funcoes_cec_2015/rp_iml.c ./algorithms/genetic.c ./algorithms/pso.c ./libs/parameters.c ./libs/commom.c ./algorithms/clonalg.c ./algorithms/aco.c ./algorithms/diferencial.c -lm
+ilha_proporcional_output = prop
+ilha_direta_output = dire
+medidas_geneticas_output = metrics
 
 compil:;
-	gcc -o evol $(codname).c ./libs/statistics.c ./libs/log.c ./libs/crossover.c ./libs/types.c ./libs/utils.c ./libs/funcoes_cec_2015/cec15_test_func.c ./libs/funcoes_cec_2015/ecr_iml.c ./libs/funcoes_cec_2015/evaluation_count_iml.c ./libs/funcoes_cec_2015/record_result_iml.c ./libs/funcoes_cec_2015/rp_iml.c ./algorithms/genetic.c ./algorithms/pso.c ./libs/parameters.c ./libs/commom.c ./algorithms/clonalg.c ./algorithms/aco.c ./algorithms/diferencial.c -lm; \
+	gcc -o evol $(codname).c $(commom_libs); \
 	gcc utils/combinationK.c -o combination; \
 
 run: compil;
@@ -19,9 +18,16 @@ statistics: compil; \
 	./evol
 	./scripts/sh/gerar_todas_estatisticas.sh; \
 
-genetic: ;
-	gcc -o medidas utils/medidas_geneticas.c ./libs/statistics.c ./libs/log.c ./libs/crossover.c ./libs/types.c ./libs/utils.c ./libs/funcoes_cec_2015/cec15_test_func.c ./libs/funcoes_cec_2015/ecr_iml.c ./libs/funcoes_cec_2015/evaluation_count_iml.c ./libs/funcoes_cec_2015/record_result_iml.c ./libs/funcoes_cec_2015/rp_iml.c ./algorithms/genetic.c ./algorithms/pso.c ./libs/parameters.c ./libs/commom.c ./algorithms/clonalg.c ./algorithms/aco.c ./algorithms/diferencial.c -lm; \
+genetic_metrics: ;
+	gcc -o $(medidas_geneticas_output) utils/medidas_geneticas.c $(commom_libs); \
 
+direct: ;
+	gcc -o $(ilha_direta_output) algoritmoIlhaEscolhaDireta.c $(commom_libs); \
+
+proportional: ;
+	gcc -o $(ilha_proporcional_output) algoritmoIlhaEscolhaProporcional.c $(commom_libs); \
+
+all: genetic_metrics direct proportional; \
 	
 furaaf: prepare;
 	./scripts/sh/verificar_params.sh; \
